--- a/Analise_.ipynb
+++ b/Analise_.ipynb
@@ -490,7 +490,7 @@
         "id": "f66e2b24"
       },
       "source": [
-        "# Campo de Educacional"
+        "# Campo Educacional"
       ]
     },
     {
